--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,71 @@
     src: url(./assets/fonts/Inter-VariableFont_slnt\,wght.ttf);
 }
 
+* {
+    margin: 0;
+    padding:0;
+}
+
 body{
     font-family: Inter, Arial, sans-serif;
     font-size: 14px;
+    background-color: #141414;
+    color: white;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+section {
+    background-color:#1f1f1f; 
+    padding: 30px;
+    margin: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 235px;
+
+}
+img {
+    width: 70px;
+    border-radius: 50px;
+    
+}
+h1 {
+    font-size: 1.3em;
+    font-weight: 400;
+    margin: 20px 0 5px 0;
+}
+.yellow {
+    color: #c5f82a;
+    font-size: 0.7em;
+    font-weight: 600;
+}
+.smallText {
+    font-size: 0.8em;
+    font-weight: 400;
+    margin: 20px 0 10px 0;
+}
+
+ul {
+    list-style-type: none;
+    text-align: center;
+    width: 100%;
+}
+
+li {
+    padding: 10px;
+    background-color:#333333;
+    margin: 12px 0px;
+    border-radius: 6px;
+    font-size: 0.8em;
+    font-weight: 600;
+}
+
+li:visited, li:hover, li:focus {
+    background-color:#c5f82a;
+    color: #1f1f1f;
+    cursor: pointer;
 }
