--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,8 @@ section {
     flex-direction: column;
     align-items: center;
     width: 235px;
-
 }
+
 img {
     width: 70px;
     border-radius: 50px;
@@ -54,20 +54,27 @@ h1 {
 ul {
     list-style-type: none;
     text-align: center;
-    width: 100%;
+    width: 100%;    
 }
 
-li {
-    padding: 10px;
+li {  
     background-color:#333333;
     margin: 12px 0px;
-    border-radius: 6px;
+    border-radius: 6px; 
     font-size: 0.8em;
-    font-weight: 600;
+    font-weight: 600;  
 }
 
-li:visited, li:hover, li:focus {
+a {
+    border-radius: 6px;
+    padding: 10px;
+    display:block;
+    text-decoration: none;
+    color: white;
+}
+
+a:hover, a:focus {
     background-color:#c5f82a;
     color: #1f1f1f;
-    cursor: pointer;
+    cursor: pointer;   
 }
